fine-tune python cleanup csv

--- a/playground/README
+++ b/playground/README
@@ -5,6 +5,7 @@ test_langchain_vs: langchain + vector store + csv (https://how.wtf/how-to-use-cs
 test_langchain_db_agent: SQLDatabaseSequentialChain (https://medium.com/dataherald/how-to-langchain-sqlchain-c7342dd41614)
 test_sqlite: convert csv to sqlite, gpt SQL queries
 test_csv_python: write uploaded file to local, ask AI for python script
+test_code_assistant: https://platform.openai.com/docs/assistants/tools/tools-beta. This api allows uploading files. Need to check its price.
 --------
 
 long term memory
